Replaced translation keys

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5529,5 +5529,30 @@
   "c77d1dfb-a556-4373-9643-5ebe22dc7c21": "Versturen, bewerken en bekijken",
   "d049c682-f167-4dec-b909-4e1d4c443a94": "afzenders",
   "1407ad7f-146a-423f-8101-d6d3563e10cc": "afzender",
-  "7dfd0425-b8ff-4dec-8c6d-257d94eabbe7": "Communicatie"
+  "7dfd0425-b8ff-4dec-8c6d-257d94eabbe7": "Communicatie",
+  "0b3d6ea1-a70b-428c-9ba4-cc0c327ed415": "Deze webshop heeft geregistreerde verkopen bij UiTPAS. Je kan de webshop enkel archiveren.",
+  "f3daff19-a227-4e45-b19a-c770bd7a6687": "Eén of meerdere UiTPAS-nummers zijn al gebruikt voor dit UiTPAS-evenement.",
+  "83c472b8-4bc5-4282-bbc9-1c6a2d382171": "Het kansentarief voor sommige UiTPAS-nummers kon niet worden opgehaald.",
+  "9a0ad099-99e3-4341-beac-f14feb3fb9d1": "Het kansentarief voor deze UiTPAS is {correctPrice} in plaats van {orderPrice}.",
+  "3d08a166-11a7-4429-8ff7-84458bbe3e9a": "Er is een fout opgetreden bij het registreren van de UiTPAS ticket verkoop. Probeer het later opnieuw.",
+  "1259b59f-6447-4da8-887e-848f05da346f": "Winkelmandje",
+  "c2da8c9e-1772-49ad-84e7-c59230a42efa": "Vul een UiTPAS-nummer in",
+  "6bb156ba-1ab9-40d7-ad72-c71460b2d131": "Ongeldige UiTPAS-nummer, kijk het nummer na.",
+  "805da469-0061-4c7f-b2fd-f0a8835cb21e": "Jouw UiTPAS geeft recht op een sociaal tarief van {specificPrice} in plaats van het standaard sociaal tarief van {generalPrice}",
+  "5fd16c16-3986-484a-9cef-d009c01b93bf": "Een UiTPAS-nummer kan maar één keer gebruikt worden, per UiTPAS-evenement.",
+  "43c308e7-301b-46f0-abed-ae855fa49bed": "Geef enkel UiTPAS-nummers als je gebruikt maakt van het UiTPAS sociaal tarief.",
+  "37ba6753-ea29-4166-94dc-43538a5e7356": "Vul een UiTPAS-nummer in.",
+  "13e018ab-25db-4743-9267-f0724862dac9": "Het opgegeven UiTPAS-nummer is ongeldig. Controleer het nummer en probeer het opnieuw.",
+  "6a33dbcd-25ae-462a-897c-d7e33a9acdd9": "${product-name} is uitverkocht",
+  "f9083abe-bb56-4e5d-9af6-f73a91c2666b": "${product-price-name} is uitverkocht",
+  "8e07d5a3-f396-47a0-a6a1-4840fa3a896b": "Er is nog maar {1-item-or-person-or-ticket} beschikbaar",
+  "a692b530-6f04-48a1-b2a0-75816ec408b0": "Er is nog maar {1-item-or-person-or-ticket} beschikbaar, en die zit al in jouw winkelmandje",
+  "5a535712-c618-43a3-8eed-59a547db6c91": "Er zijn nog maar {5-items-or-persons-or-tickets} beschikbaar",
+  "d5cbe857-9b30-4809-bfd1-b74a6938fdd4": "Er zijn nog maar {5-items-or-persons-or-tickets} beschikbaar, waarvan er al één in jouw winkelmandje zit",
+  "cdb66c67-f212-48d1-a5bc-f969748f6bfa": "Er zijn nog maar {5-items-or-persons-or-tickets} beschikbaar, waarvan er al {4} in jouw winkelmandje zitten",
+  "380b897e-c3b8-418f-9c46-ef10724c6cf2": "Er is nog maar {1-item-or-person-or-ticket} van {product-price-name} beschikbaar",
+  "50be5122-c04e-4d53-a059-5c40e34a92b6": "Er is nog maar {1-item-or-person-or-ticket} van {product-price-name} beschikbaar, en die zit al in jouw winkelmandje",
+  "a50f1798-62eb-4980-8678-17abe9bfded4": "Er zijn nog maar {5-items-or-persons-or-tickets} van {product-price-name} beschikbaar",
+  "5e0f0a60-2cb9-4093-8f85-a3f37c62b27f": "Er zijn nog maar {5-items-or-persons-or-tickets} van {product-price-name} beschikbaar, waarvan er al één in jouw winkelmandje zit",
+  "04301229-4cbe-4ea0-bfdf-03284120f09f": "Er zijn nog maar {5-items-or-persons-or-tickets} van {product-price-name} beschikbaar, waarvan er al {4} in jouw winkelmandje zitten"
 }
