--- a/shared/locales/src/machine-fr.json
+++ b/shared/locales/src/machine-fr.json
@@ -371,6 +371,10 @@
     "original": "Naam van het platform",
     "translation": "Nom de la plateforme"
   },
+  "04301229-4cbe-4ea0-bfdf-03284120f09f": {
+    "original": "Er zijn nog maar {5-items-or-persons-or-tickets} van {product-price-name} beschikbaar, waarvan er al {4} in jouw winkelmandje zitten",
+    "translation": "Il ne reste plus que {5-items-or-persons-or-tickets} de {product-price-name}, dont {4} déjà dans votre panier"
+  },
   "04392571-f6a2-470d-b2a1-90004ac27dbc": {
     "original": "Te betalen tegen {date}",
     "translation": "À payer pour le {date}"
@@ -999,6 +1003,10 @@
     "original": "{count} leden passen in geen enkele groep. Kies hieronder in welke groep je deze toch wilt inschrijven.",
     "translation": "{count} membres n'appartiennent à aucun groupe. Choisissez ci-dessous le groupe dans lequel vous souhaitez néanmoins les inscrire."
   },
+  "0b3d6ea1-a70b-428c-9ba4-cc0c327ed415": {
+    "original": "Deze webshop heeft geregistreerde verkopen bij UiTPAS. Je kan de webshop enkel archiveren.",
+    "translation": "Cette boutique en ligne a des ventes enregistrées auprès d'UiTPAS. Vous ne pouvez qu'archiver la boutique."
+  },
   "0b44456e-1338-4468-ba71-5aabc171555f": {
     "original": "Ga naar vorige lid",
     "translation": "Aller au membre précédent"
@@ -1587,6 +1595,10 @@
     "original": "vanaf",
     "translation": "à partir de"
   },
+  "1259b59f-6447-4da8-887e-848f05da346f": {
+    "original": "Winkelmandje",
+    "translation": "Panier"
+  },
   "125db847-73bc-4494-9732-fe2ef4e55f66": {
     "original": "Om",
     "translation": "À"
@@ -1742,6 +1754,10 @@
   "13daa284-503c-4841-a2ec-16d89ab38cdc": {
     "original": "Wijzig status",
     "translation": "Modifier le statut"
+  },
+  "13e018ab-25db-4743-9267-f0724862dac9": {
+    "original": "Het opgegeven UiTPAS-nummer is ongeldig. Controleer het nummer en probeer het opnieuw.",
+    "translation": "Le numéro UiTPAS fourni n'est pas valide. Vérifiez le numéro et réessayez."
   },
   "13f1507b-7ad1-4748-981f-8b7b12aa2dce": {
     "original": "vandaag",
@@ -4835,6 +4851,10 @@
     "original": "Alle leden",
     "translation": "Tous les membres"
   },
+  "37ba6753-ea29-4166-94dc-43538a5e7356": {
+    "original": "Vul een UiTPAS-nummer in.",
+    "translation": "Veuillez entrer un numéro UiTPAS."
+  },
   "37d201fd-287d-4957-b559-b882744ea886": {
     "original": "Beperk tot leden met een registratie bij deze standaard leeftijdsgroepen.",
     "translation": "Limiter aux membres ayant une inscription dans ces groupes d'âge standard."
@@ -4846,6 +4866,10 @@
   "37e053fe-6652-49d0-80a6-9ac4995cfa8a": {
     "original": "Inschrijvingen openen",
     "translation": "Ouvrir les inscriptions"
+  },
+  "380b897e-c3b8-418f-9c46-ef10724c6cf2": {
+    "original": "Er is nog maar {1-item-or-person-or-ticket} van {product-price-name} beschikbaar",
+    "translation": "Il ne reste plus que {1-item-or-person-or-ticket} de {product-price-name} disponible"
   },
   "381ebb39-0c79-4919-aa9c-b68375a98ad4": {
     "original": "Verifieer",
@@ -5186,6 +5210,10 @@
   "3cfda9a5-3dbc-4490-9dcf-986aafc7b868": {
     "original": "De startdatum van de inschrijving moet na de startdatum van de groep zelf zijn",
     "translation": "La date de début de l’inscription doit être postérieure à la date de début du groupe lui-même"
+  },
+  "3d08a166-11a7-4429-8ff7-84458bbe3e9a": {
+    "original": "Er is een fout opgetreden bij het registreren van de UiTPAS ticket verkoop. Probeer het later opnieuw.",
+    "translation": "Une erreur s'est produite lors de l'enregistrement de la vente de tickets UiTPAS. Veuillez réessayer plus tard."
   },
   "3d3a30bb-3628-413e-8d1a-3864b1dae8e1": {
     "original": "Vanaf",
@@ -5670,6 +5698,10 @@
   "43c1d02d-ca64-4809-95d6-50491c712cbb": {
     "original": "Korting als meerdere gezinsleden inschrijven voor dezelfde inschrijvingsgroep/activiteit.",
     "translation": "Réduction si plusieurs membres de la famille s'inscrivent pour le même groupe d'inscription/activité."
+  },
+  "43c308e7-301b-46f0-abed-ae855fa49bed": {
+    "original": "Geef enkel UiTPAS-nummers als je gebruikt maakt van het UiTPAS sociaal tarief.",
+    "translation": "Indiquez uniquement des numéros UiTPAS si vous souhaitez bénéficier du tarif social UiTPAS."
   },
   "43cc054d-cf2f-432b-9259-e7764dc929e3": {
     "original": "Dit werkjaar is vergrendeld, je kan geen meldingen meer aanpassen in deze periode",
@@ -6871,6 +6903,10 @@
     "original": "Berichten versturen",
     "translation": "Envoyer des messages"
   },
+  "50be5122-c04e-4d53-a059-5c40e34a92b6": {
+    "original": "Er is nog maar {1-item-or-person-or-ticket} van {product-price-name} beschikbaar, en die zit al in jouw winkelmandje",
+    "translation": "Il ne reste plus que {1-item-or-person-or-ticket} de {product-price-name}, et il est déjà dans votre panier"
+  },
   "50c110d0-67dd-4733-9fb1-49a1a541e2bd": {
     "original": "Door Stamhoofd en UiTPAS aan elkaar te koppelen kan je een automatische terugbetaling krijgen voor elke verkoop met UiTPAS-kansentarief. Eerst moet je een officiële UiTPAS-organisator worden, zo weet men aan wie de terugbetaling moet gebeuren. Nadien moet je een integratie aanmaken op de website van <button>Publiq</button>. Geef nadien de gegevens van die integratie hieronder in. Tot slot zal je bij elk artikel uit de webshop een evenement uit de UiTdatabank moeten koppelen.",
     "translation": "En connectant Stamhoofd et UiTPAS, vous pouvez obtenir un remboursement automatique pour chaque vente au tarif réduit UiTPAS. Il faut d'abord devenir un organisateur officiel UiTPAS afin de pouvoir préciser à qui le remboursement doit être effectué. Ensuite, créez une intégration sur le site de <button>Publiq</button>. Entrez ensuite les données de cette intégration ci-dessous. Enfin, pour chaque article de la boutique en ligne, vous devrez associer un événement de la base de données UiT."
@@ -7651,6 +7687,10 @@
     "original": "We hebben de betaling ontvangen.",
     "translation": "Nous avons reçu le paiement."
   },
+  "5a535712-c618-43a3-8eed-59a547db6c91": {
+    "original": "Er zijn nog maar {5-items-or-persons-or-tickets} beschikbaar",
+    "translation": "Il ne reste plus que {5-items-or-persons-or-tickets} disponibles"
+  },
   "5a58b689-5269-40a0-907e-c977b293c2fa": {
     "original": "Kortingscode toepassen",
     "translation": "Appliquer un code de réduction"
@@ -7967,6 +8007,10 @@
     "original": "Of",
     "translation": "Ou"
   },
+  "5e0f0a60-2cb9-4093-8f85-a3f37c62b27f": {
+    "original": "Er zijn nog maar {5-items-or-persons-or-tickets} van {product-price-name} beschikbaar, waarvan er al één in jouw winkelmandje zit",
+    "translation": "Il ne reste plus que {5-items-or-persons-or-tickets} de {product-price-name}, dont un déjà dans votre panier"
+  },
   "5e104255-3930-45ab-9a4b-1bd2135259ec": {
     "original": "Plusmama",
     "translation": "Belle-mère"
@@ -8158,6 +8202,10 @@
   "5fcbcd43-cfec-4968-84b2-6efc406609bf": {
     "original": "Vader",
     "translation": "Père"
+  },
+  "5fd16c16-3986-484a-9cef-d009c01b93bf": {
+    "original": "Een UiTPAS-nummer kan maar één keer gebruikt worden, per UiTPAS-evenement.",
+    "translation": "Un numéro UiTPAS ne peut être utilisé qu'une seule fois par événement UiTPAS."
   },
   "5fd1f84b-ed82-4022-80d0-49caad220c88": {
     "original": "API-key {name} werd verwijderd",
@@ -8963,6 +9011,10 @@
     "original": "Vergrendel inschrijvingen",
     "translation": "Verrouiller les inscriptions"
   },
+  "6a33dbcd-25ae-462a-897c-d7e33a9acdd9": {
+    "original": "${product-name} is uitverkocht",
+    "translation": "${product-name} est épuisé"
+  },
   "6a35dc73-d0b6-4785-acb8-0a49460abbf0": {
     "original": "Algemene korting",
     "translation": "Réduction générale"
@@ -9122,6 +9174,10 @@
   "6ba4f526-8b64-4902-903b-7cb176684151": {
     "original": "Slim in- en uitschakelen",
     "translation": "Activation et désactivation intelligentes"
+  },
+  "6bb156ba-1ab9-40d7-ad72-c71460b2d131": {
+    "original": "Ongeldige UiTPAS-nummer, kijk het nummer na.",
+    "translation": "Numéro UiTPAS invalide, vérifiez le numéro."
   },
   "6bc5d58e-d6e4-44fd-a0b1-6f4477457915": {
     "original": "Deze gegevens komen op jouw betaalbewijs. Zorg dat ze in orde zijn, je kan ze later niet meer wijzigen.",
@@ -10803,6 +10859,10 @@
     "original": "één stuk",
     "translation": "un article"
   },
+  "805da469-0061-4c7f-b2fd-f0a8835cb21e": {
+    "original": "Jouw UiTPAS geeft recht op een sociaal tarief van {specificPrice} in plaats van het standaard sociaal tarief van {generalPrice}",
+    "translation": "Votre UiTPAS vous donne droit à un tarif social de {specificPrice} au lieu du tarif social standard de {generalPrice}"
+  },
   "805f19ef-32b7-4029-8efc-9ffdb1730add": {
     "original": "Deze kortingscode is ongeldig",
     "translation": "Ce code de réduction est invalide"
@@ -11050,6 +11110,10 @@
   "83c3c1be-6cd2-4360-a2f1-c6e807d1b23e": {
     "original": "Geen dierlijke producten",
     "translation": "Pas de produits animaux"
+  },
+  "83c472b8-4bc5-4282-bbc9-1c6a2d382171": {
+    "original": "Het kansentarief voor sommige UiTPAS-nummers kon niet worden opgehaald.",
+    "translation": "Le tarif social pour certains numéros UiTPAS n'a pas pu être récupéré."
   },
   "83c99392-7efa-44d3-8531-1843c5fa7c4d": {
     "original": "Ongeldig tarief",
@@ -11970,6 +12034,10 @@
   "8dfbd01b-feb1-4b7e-a1f1-2daf19fb2775": {
     "original": "Totaalprijs",
     "translation": "Prix total"
+  },
+  "8e07d5a3-f396-47a0-a6a1-4840fa3a896b": {
+    "original": "Er is nog maar {1-item-or-person-or-ticket} beschikbaar",
+    "translation": "Il ne reste plus que {1-item-or-person-or-ticket} disponible"
   },
   "8e0924af-042c-42ab-85e1-dda0a2106b98": {
     "original": "Unieke leden",
@@ -12903,6 +12971,10 @@
     "original": "Nieuw lid toevoegen",
     "translation": "Ajouter un nouveau membre"
   },
+  "9a0ad099-99e3-4341-beac-f14feb3fb9d1": {
+    "original": "Het kansentarief voor deze UiTPAS is {correctPrice} in plaats van {orderPrice}.",
+    "translation": "Le tarif social pour cet UiTPAS est de {correctPrice} au lieu de {orderPrice}."
+  },
   "9a1ec903-87bd-4776-9436-007caf94bcf3": {
     "original": "Dit zijn alle leden waarvoor we geen geschikte leeftijdsgroep konden vinden: omdat ze te oud of te jong zijn bijvoorbeeld. Pas de instellingen van jouw inschrijvingsgroepen eventueel aan.",
     "translation": "Voici la liste des membres pour lesquels aucun groupe d’âge n’a été trouvé, probablement parce qu’ils sont trop jeunes ou trop âgés. Au besoin, ajuste les paramètres de tes groupes d’inscription."
@@ -13803,6 +13875,10 @@
     "original": "Ben je zeker dat je dit tarief wilt verwijderen?",
     "translation": "Êtes-vous sûr de vouloir supprimer ce tarif ?"
   },
+  "a50f1798-62eb-4980-8678-17abe9bfded4": {
+    "original": "Er zijn nog maar {5-items-or-persons-or-tickets} van {product-price-name} beschikbaar",
+    "translation": "Il ne reste plus que {5-items-or-persons-or-tickets} de {product-price-name} disponibles"
+  },
   "a5332744-e6e1-4af9-b05c-cbc21515c4d0": {
     "original": "Groepsnummer betalende groep",
     "translation": "Numéro du groupe payant"
@@ -13974,6 +14050,10 @@
   "a68feeef-07a3-4406-86ef-e5ab1a168513": {
     "original": "Geslacht wijzigen naar {gender}",
     "translation": "Modifier le sexe en {gender}"
+  },
+  "a692b530-6f04-48a1-b2a0-75816ec408b0": {
+    "original": "Er is nog maar {1-item-or-person-or-ticket} beschikbaar, en die zit al in jouw winkelmandje",
+    "translation": "Il ne reste plus que {1-item-or-person-or-ticket} disponible, et il est déjà dans votre panier"
   },
   "a69c9d5b-7191-49d8-b21a-f196547dfc0e": {
     "original": "Of open zelf een andere app. Je kan de gegevens makkelijk kopiëren hierboven door erop te klikken.",
@@ -16375,6 +16455,10 @@
     "original": "Logboek",
     "translation": "Journal"
   },
+  "c2da8c9e-1772-49ad-84e7-c59230a42efa": {
+    "original": "Vul een UiTPAS-nummer in",
+    "translation": "Saisissez un numéro UiTPAS"
+  },
   "c2dad537-31e8-412c-8002-c7210d6f33d0": {
     "original": "Nog geen API-keys aangemaakt",
     "translation": "Aucune API-key n'a encore été créée"
@@ -17311,6 +17395,10 @@
     "original": "Betalingen",
     "translation": "Paiements"
   },
+  "cdb66c67-f212-48d1-a5bc-f969748f6bfa": {
+    "original": "Er zijn nog maar {5-items-or-persons-or-tickets} beschikbaar, waarvan er al {4} in jouw winkelmandje zitten",
+    "translation": "Il ne reste plus que {5-items-or-persons-or-tickets} disponibles, dont {4} déjà dans votre panier"
+  },
   "cdc1ea2a-5cc4-4c47-bbd1-eea90b7612be": {
     "original": "één minuut geleden",
     "translation": "il y a une minute"
@@ -17978,6 +18066,10 @@
   "d5c7e037-e526-41d5-9151-d9e115b4b8de": {
     "original": "Dit is leeg maar werd wel ingevuld in een andere taal",
     "translation": "Ceci est vide mais a été rempli dans une autre langue"
+  },
+  "d5cbe857-9b30-4809-bfd1-b74a6938fdd4": {
+    "original": "Er zijn nog maar {5-items-or-persons-or-tickets} beschikbaar, waarvan er al één in jouw winkelmandje zit",
+    "translation": "Il ne reste plus que {5-items-or-persons-or-tickets} disponibles, dont un déjà dans votre panier"
   },
   "d5d2e25f-588e-496e-925f-f7e375c3888a": {
     "original": "Mijn vereniging",
@@ -20655,6 +20747,10 @@
     "original": "Aansluitingen aanrekenen",
     "translation": "Facturer les affiliations"
   },
+  "f3daff19-a227-4e45-b19a-c770bd7a6687": {
+    "original": "Eén of meerdere UiTPAS-nummers zijn al gebruikt voor dit UiTPAS-evenement.",
+    "translation": "Un ou plusieurs numéros UiTPAS ont déjà été utilisés pour cet événement UiTPAS."
+  },
   "f3de2983-5c64-4653-b2c5-62c94eb3d04f": {
     "original": "Maken",
     "translation": "Créer"
@@ -21166,6 +21262,10 @@
   "f90728f1-0e73-4027-9408-adfc38c9a4f0": {
     "original": "Tekst met feedback",
     "translation": "Texte avec feedback"
+  },
+  "f9083abe-bb56-4e5d-9af6-f73a91c2666b": {
+    "original": "${product-price-name} is uitverkocht",
+    "translation": "${product-price-name} est épuisé"
   },
   "f90bed26-2790-49b7-9e77-e02518022ee5": {
     "original": "het ingevoerde e-mailadres",
