Fixed weird translations

--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -170,5 +170,7 @@
   "fd3fea4f-73c7-4c8d-90cd-80ea90e53b98": "Gender",
   "fde0cfa6-c279-4eef-ab75-8f62fd4028a8": "Status",
   "fe29857c-e4ac-4b25-aa0e-31813f3570c2": "tag",
-  "43cf58c2-2263-4c99-87d2-71d61e8b95fe": "Total"
+  "43cf58c2-2263-4c99-87d2-71d61e8b95fe": "Total",
+  "dcddc3ae-d5cb-4e28-b7bd-a38020ce64ba": "Shops",
+  "2a7f1944-1da2-4a55-bb1d-981aeed5d29e": "Shops"
 }
