--- a/shared/locales/src/machine-en.json
+++ b/shared/locales/src/machine-en.json
@@ -133,7 +133,7 @@
   },
   "017ee92d-62a3-4f64-afec-e2fa7055e97c": {
     "original": "Huisstijl",
-    "translation": "House style"
+    "translation": "Branding"
   },
   "019a1d43-56d2-483d-8c3e-e60d00634e93": {
     "original": "Knop waarmee gebruikers hun wachtwoord kunnen herstellen",
@@ -16501,7 +16501,7 @@
   },
   "c654281e-1993-4643-a876-94caa3a192ff": {
     "original": "Huisstijl",
-    "translation": "Corporate identity"
+    "translation": "Branding"
   },
   "c66d114d-2ef3-476f-ad00-98fbe3195365": {
     "original": "Je moet een verlaagd tarief opgeven voor de UiTPAS.",
@@ -19497,7 +19497,7 @@
   },
   "e85a86ee-7751-4791-984b-f67dc1106f6b": {
     "original": "Webshops",
-    "translation": "Online shops"
+    "translation": "Webshops"
   },
   "e8600ed0-ac82-4c0f-8719-bd91173d653f": {
     "original": "Betaalaccounts",
