Improved copy when editing senders

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -5559,5 +5559,15 @@
   "97c9795d-dede-48ca-af05-1e4791209e17": "E-mailadres om je bevestigingsemail te ontvangen",
   "b57b303a-b0e2-414f-be96-c61f40d64a87": "Je ontvangt jouw tickets op dit e-mailadres. Kijk het goed na.",
   "068b3219-9397-41fc-8ebf-77df845e74b8": "Kies je betaalmethode",
-  "131d5fec-9960-4fc1-bcd8-8ddbc90e99c2": "Bevestig jouw bestelling"
+  "131d5fec-9960-4fc1-bcd8-8ddbc90e99c2": "Bevestig jouw bestelling",
+  "e83fded1-6903-4459-9ef0-4fe9d7238bab": "Kies hier wie deze inschrijvingsgroep kan bekijken, bewerken of beheren.",
+  "9b4f3b56-e869-4442-bb5f-156c2b9271b0": "De naam die ontvangers zien als ze een e-mail ontvangen in plaats van het volledige e-mailadres.",
+  "b3dc156b-410d-4d3f-bd5c-5aa6f9c9e355": "Stel in als standaard afzender",
+  "9e99d02f-4498-4160-877d-dc14bbadc98f": "Dan wordt alle communicatie hiermee verstuurd tenzij er voor een specifieke inschrijvingsgroep of webshop een andere afzender staat ingesteld",
+  "31a32fe1-8e29-41aa-99a8-bf79ab90f93b": "Dit is de standaard afzender",
+  "037e9189-33ef-44c1-bad2-ff3ea3da0629": "Alle communicatie wordt via deze afzender verstuurd tenzij er voor een specifieke inschrijvingsgroep of webshop een andere afzender staat ingesteld",
+  "4a58b661-087b-4951-9643-2b00352bba85": "Toegangsrechten instellen",
+  "d040c8bd-23d1-42c3-a609-5e2febc12f07": "Stel in wie met dit e-mailadres kan versturen en wie verzonden berichten kan bekijken.",
+  "e01618ed-7f4f-4a80-a926-3afb7b3806fc": "Kies hier wie berichten van versturen en wie verstuurde berichten kan bekijken.",
+  "a3e11da3-1894-4519-99a8-ac5fb32c555d": "Naam"
 }
