--- a/shared/locales/src/machine-en.json
+++ b/shared/locales/src/machine-en.json
@@ -19707,6 +19707,10 @@
     "original": "Kijk jouw verbinding na en probeer opnieuw",
     "translation": "Check your connection and try again"
   },
+  "ea84aed8-48ce-4a43-b391-0a4a16782909": {
+    "original": "Verwijderen",
+    "translation": "Delete"
+  },
   "ea927f14-835b-43f6-bf6e-3e689b5a0824": {
     "original": "*Hoe oud het lid wordt in het kalenderjaar van de start van een werkjaar (dus leeftijd op 31/12/{startYear}). Ter referentie: leden uit het eerste leerjaar zijn 6 jaar op 31 december. Leden uit het eerste secundair zijn 12 jaar op 31 december.",
     "translation": "*How old the member becomes in the calendar year of the start of a work year (so age on 31/12/{startYear}). For reference: members in the first year of primary school are 6 years old on 31 December. Members in the first year of secondary school are 12 years old on 31 December."
