--- a/shared/locales/src/machine-fr.json
+++ b/shared/locales/src/machine-fr.json
@@ -20011,6 +20011,10 @@
     "original": "Kijk jouw verbinding na en probeer opnieuw",
     "translation": "Vérifiez votre connexion et réessayez"
   },
+  "ea84aed8-48ce-4a43-b391-0a4a16782909": {
+    "original": "Verwijderen",
+    "translation": "Supprimer"
+  },
   "ea927f14-835b-43f6-bf6e-3e689b5a0824": {
     "original": "*Hoe oud het lid wordt in het kalenderjaar van de start van een werkjaar (dus leeftijd op 31/12/{startYear}). Ter referentie: leden uit het eerste leerjaar zijn 6 jaar op 31 december. Leden uit het eerste secundair zijn 12 jaar op 31 december.",
     "translation": "*Quel âge aura le membre au cours de l'année civile du début d'une année associative (donc l'âge au 31/12/{startYear}). À titre de référence : les membres de la première année primaire ont 6 ans au 31 décembre. Les membres de la première année secondaire ont 12 ans au 31 décembre."
