--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -4287,7 +4287,7 @@
   "e8b9a1db-97d0-410e-99b2-6a87c1087593": "Jouw bericht is te groot. Grote bijlages verstuur je beter niet via e-mail, je plaatst dan best een link naar de locatie in bv. Google Drive. De maximale grootte van een e-mail is 10MB, inclusief het bericht. Als je grote bestanden verstuurt kan je ze ook proberen te verkleinen.",
   "54da84d6-5f6a-4db2-be34-9ddb7f47bbe8": "Het bestandstype van jouw bijlage wordt niet ondersteund of is onveilig om in een e-mail te plaatsen. Overweeg om je bestand op bv. Google Drive te zetten en de link in jouw e-mail te zetten.",
   "55899a7c-f3d4-43fe-a431-70a3a9e78e34": "De e-mail die je probeert te versturen bestaat niet meer",
-  "f660b2eb-e382-4d21-86e4-673ca7bc2d4a": "Er ging iets mis bij het aanmaken van de afzenders.",
+  "f660b2eb-e382-4d21-86e4-673ca7bc2d4a": "Er ging iets mis bij het aanmaken van de lijst met ontvangers.",
   "62246c37-15c7-4f7d-94e2-7476f971c8da": "Betalen van inschrijvingsgelden of webshops voor een vereniging via Stamhoofd (partner).",
   "df5c326c-e9a3-4f76-ba80-8a22f95f0e70": "Bestelling -",
   "12be5ac0-8353-43a2-badb-ab3b27d156b3": "Bestelling #",
