Improved email error handling

--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -4279,7 +4279,7 @@
   "2fa762f2-c061-4c40-83cb-6ddc3e5f0f7a": "Je kan op het ledenportaal inloggen met",
   "c2af5148-15a7-44b1-aa3e-91cfc4c66013": "Je kan op het ledenportaal een nieuw account aanmaken met het e-mailadres",
   "f3aa8253-d88e-41c7-8c98-ed477806c533": ", dan krijg je automatisch toegang tot alle bestaande gegevens.",
-  "af49a569-ce88-48d9-ac37-81e594e16c03": "Dit e-mailadres is waarschijnlijk ongeldig. We konden eerder geen e-mails naar dit adres sturen.",
+  "af49a569-ce88-48d9-ac37-81e594e16c03": "Dit e-mailadres werd overgeslagen omdat het waarschijnlijk ongeldig is. We konden eerder geen e-mails naar dit adres sturen.",
   "e6523f56-397e-4127-8bf7-8396f6f25a62": "Dit e-mailadres heeft eerder een e-mail als spam gemarkeerd. We kunnen geen e-mails naar dit adres sturen.",
   "e78c8218-4d25-413b-ae6b-fd916e663e5a": "Vul een onderwerp in voor je een e-mail verstuurt",
   "65b701a3-c74c-4eb6-b98e-7b9dcad0a358": "Vul een tekst in voor je een e-mail verstuurt",
